src/content/docs/ja/sdk/unity/v5/features/events.mdx
---
title: "イベント情報の送信"
description: "Adjustにイベント情報を送信するには、これらのメソッドを使用してください。"
slug: "en/sdk/unity/features/events"
versions: 
    - 
        label: "v5"
        value: "v5"
        default: true
    - 
        label: "v4"
        value: "v4"
redirects: 
    v4: "/en/sdk/unity/v4/features/events"
---
Adjust SDKは`AdjustEvent`オブジェクトを提供しており、アプリのイベント情報を構造化してAdjustのサーバーに送信することができます。

AdjustEventオブジェクトをインスタンス化する \{\#instantiate\-an\-adjustevent\-object\}
----------------------------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public AdjustEvent(string eventToken)
```

</CodeBlock> 

Adjust SDKでイベント情報を送信するには、`AdjustEvent`オブジェクトをインスタンス化する必要があります。このオブジェクトには、アプリでイベントが発生した時にAdjustに送信される変数が含まれます。

イベントオブジェクトをインスタンス化するには、新しい`AdjustEvent`インスタンスを作成して以下のパラメーターをパスしてください：

* `eventToken` （`string`）：お客様のAdjust[イベントトークン](https://help.adjust.com/en/article/add-events#manage-your-events)。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
Adjust.TrackEvent(adjustEvent);
```

イベントを送信する \{\#send\-an\-event\}
------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public static void TrackEvent(AdjustEvent adjustEvent);
```

</CodeBlock> 

[Adjustイベントトークン](https://help.adjust.com/en/article/add-events#add-event)を関連付けることで、アプリ内のユーザー行動を記録できます。イベントを記録する方法：

* Adjustイベントのインスタンスを新規作成し、イベントトークンを文字列引数としてパスします。
* イベントのインスタンスを引数として`Adust.TrackEvent`メソッドを呼び出します。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
Adjust.TrackEvent(adjustEvent);
```

### 例 \{\#example\}

この例では、`g3mfiw`トークンでイベントを記録する方法を示します。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
Adjust.TrackEvent(adjustEvent);
```

<codeblock title="イベントログ" collapse="6-46"> 

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  android_uuid     781f17d5-5048-4fae-a4e5-77b58bab62b9
  api_level        34
  app_token        2fm9gkqubvpc
  app_version      1.0
  attribution_deeplink 1
  callback_params  {"key":"value","foo":"bar"}
  connectivity_type 1
  country          US
  cpu_type         arm64-v8a
  created_at       2024-01-25T14:13:16.151Z+0100
  currency         EUR
  device_manufacturer Google
  device_name      sdk_gphone64_arm64
  device_type      phone
  display_height   2205
  display_width    1080
  environment      sandbox
  event_buffering_enabled 0
  event_count      3
  event_token      g3mfiw
  gps_adid         5962dfc1-3a53-4692-850b-22c4bf4311a5
  gps_adid_attempt 2
  gps_adid_src     service
  hardware_name    UE1A.230829.036
  language         en
  mcc              310
  mnc              260
  needs_response_details 1
  os_build         UE1A.230829.036
  os_name          android
  os_version       14
  package_name     com.adjust.examples
  partner_params   {"key":"value","foo":"bar"}
  revenue          0.25
  screen_density   high
  screen_format    long
  screen_size      normal
  session_count    2
  session_length   23
  subsession_count 1
  time_spent       23
  tracking_enabled 1
  ui_mode          1

```

</CodeBlock> 

イベント収益を記録する \{\#record\-event\-revenue\}
---------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public void SetRevenue(double amount, string currency);
```

</CodeBlock> 

イベントインスタンスにrevenueとcurrencyプロパティを設定することで、イベントに関連する収益を記録できます。この機能を使用して、アプリ内で収益が生成されるアクションを記録しましょう。

これらのプロパティを設定するには、`AdjustEvent`インスタンスの`SetRevenue`メソッドを呼び出し、以下の引数をパスします。

* `amount` （`double`）：イベントによって発生した収益額
* `currency` （`string`）：イベント通貨の[ISO 4217コード](https://www.iban.com/currency-codes)

<callout type="seealso"> 

詳細は、[異なる通貨での購入記録](https://help.adjust.com/en/article/currency-conversion)に関するガイドをご覧ください。
</Callout> 

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.SetRevenue(0.01, "EUR");
//...
Adjust.TrackEvent(adjustEvent);
```

### 例 \{\#example\-1\}

この例では、`g3mfiw`トークンでイベントを記録する方法を示します。この関数は、このイベントの`revenue`プロパティを *`0.25`* に、`currency`プロパティを *`EUR`* に設定します。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.SetRevenue(0.25, "EUR");
Adjust.TrackEvent(adjustEvent);
```

<codeblock title="イベントログ" highlight="{range: 7-8}"> 

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  revenue          0.25
  currency         EUR
```

</CodeBlock> 

イベントの重複排除 \{\#event\-deduplication\}
----------------------------------------

<codeblock title="プロパティ宣言"> 

```cs
public string DeduplicationId { get; set; }
```

</CodeBlock> 

イベントを重複して計測するのを防ぐため、オプションとして任意のIDをパスすることもできます。SDKが最新10件のIDを保存し、トランザクションIDが重複した収益イベントを排除します。

識別子を設定するには、 `AdjustEvent`インスタンスの`DeduplicationId`プロパティをトランザクションIDに設定してください。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.DeduplicationId = "deduplicationId";
//...
Adjust.TrackEvent(adjustEvent);
```

### 例 \{\#example\-2\}

この例では、`g3mfiw`トークンでイベントを記録する方法を示します。この関数は、`DeduplicationId`プロパティを`5e85484b-1ebc-4141-aab7-25b869e54c49`に設定します。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
string deduplicationId = "5e85484b-1ebc-4141-aab7-25b869e54c49"
adjustEvent.DeduplicationId = deduplicationId;
Adjust.TrackEvent(adjustEvent);
```

<codeblock title="イベントログ" highlight="{range: 7}"> 

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  deduplication_id   5e85484b-1ebc-4141-aab7-25b869e54c49
```

</CodeBlock> 

コールバックパラメーターを追加する \{\#add\-callback\-parameters\}
------------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public void AddCallbackParameter(string key, string value);
```

</CodeBlock> 

Adjustダッシュボードで[コールバックURLを登録](https://help.adjust.com/en/article/set-up-callbacks)した場合、SDKがイベントを記録する際にコールバックURLにGETリクエストを送信します。

サーバーに送信するコールバックパラメーターを設定できます。イベントにパラメーターを設定すると、SDKはそれらを[コールバックURL](https://help.adjust.com/en/article/raw-data-exports)に追加します。この情報を使用して、自社のBIシステムでユーザーのアプリ内行動を分析することが可能です。

`AdjustEvent`インスタンスの `AddCallbackParameter`メソッドを`string`key\-value引数で呼び出して、イベントにコールバックパラメーターを追加します。このメソッドを複回呼び出すことで、複数のパラメーターを追加することができます。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.AddCallbackParameter("key", "value");
//...
Adjust.TrackEvent(adjustEvent);
```

Adjust SDKはイベントを計測し、コールバックパラメーターが追加されたURLにリクエストを送信します。例えば、URL `https://www.mydomain.com/callback`が登録されている場合、コールバックは以下のようになります：

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

<callout type="note"> 

Adjustは、カスタムコールバックパラメーターを保存しません。カスタムパラメーターは、コールバックURLにのみ追加されます。
</Callout> 

CSVレポートを使用している場合、CSVの定義欄にパラメーターを追加するようにしてください。

Adjustでは、SDKからURLに情報をパスするための様々なプレースホルダーをサポートしています。例えば、iOSの`{idfa}`プレースホルダーやAndroidの`{gps_adid}`プレースホルダーなどです。`{publisher_parameter}`プレースホルダーは、単一の文字列での全てのコールバックパラメーターを表示します。
<callout type="seealso"> 

使用可能な値の全リストを含むURLコールバックの詳細については、[コールバックガイド](https://help.adjust.com/en/article/callbacks)をご覧ください。
</Callout> 

### 例 \{\#example\-3\}

この例では、`g3mfiw`トークンでイベントを記録する方法を示します。次のコールバックパラメーターが追加されました。

* \- `event_token`
* イベントごとに生成される`revenue_amount`

コールバックURLの結果は以下のようになります：

```http
http://www.mydomain.com/callback?event_token=g3mfiw&revenue_amount=0.05
```

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.AddCallbackParameter("event_token", "g3mfiw");
adjustEvent.AddCallbackParameter("revenue_amount", "0.05");
Adjust.TrackEvent(adjustEvent);
```

<codeblock title="イベントログ" highlight="{range: 4}"> 

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  callback_params  {"event_token":"g3mfiw","revenue_amount":"0.05"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw

```

</CodeBlock> 

パートナーパラメーターを追加する \{\#add\-partner\-parameters\}
----------------------------------------------------

<codeblock title="メソッドシグネチャー"> 

```cs
public void AddPartnerParameter(string key, string value);
```

</CodeBlock> 

[パートナーパラメーター](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters)を追加することで、ネットワークパートナーに追加情報を送信することができます。

Adjustは、設定した[外部パートナー](https://help.adjust.com/en/article/integrated-partners)にパートナーパラメーターを送信します。この情報は、より詳細な分析やリターゲティング施策にご利用いただけます。パートナー用にパラメーターの設定が完了し、機能が有効化されると、Adjustのサーバーはデータ転送を開始します。
<callout type="note"> 

パートナーパラメーターはデフォルトではローデータに表示されません。ご希望の場合は、プレースホルダー`{partner_parameters}`を追加することで、それらを単一の文字列として受信することができます。
</Callout> 

`AdjustEvent`インスタンスの `AddPartnerParameter`メソッドを`string`kay\-value引数で呼び出して、パートナーパラメーターをイベントに追加します。このメソッドを複回呼び出すことで、複数のパラメーターを追加することができます。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.AddPartnerParameter("key", "value");
//...
Adjust.TrackEvent(adjustEvent);
```

### 例 \{\#example\-4\}

この例では、`g3mfiw`トークンでイベントを記録する方法を示します。次のパートナーパラメーターが追加されました。

* 関連する製品の`product_id`
* イベントをトリガーしたユーザーの`user_id`

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
adjustEvent.AddPartnerParameter("product_id", "29");
adjustEvent.AddPartnerParameter("user_id", "835");
Adjust.TrackEvent(adjustEvent);
```

<codeblock title="イベントログ" highlight="{range: 4}"> 

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  partner_params  {"product_id":"29","user_id":"835"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock> 

コールバック識別子を追加する \{\#add\-a\-callback\-identifier\}
-------------------------------------------------------

<codeblock title="プロパティ宣言"> 

```cs
public string CallbackId { get; set; }
```

</CodeBlock> 

[イベントの成功と失敗](/en/sdk/unity/features/callbacks#event-callbacks)に関するレポートを作成するために、カスタム文字列識別子を各イベントに追加することができます。コールバック識別子をイベントに割り当てるには、 `AdjustEvent`インスタンスの`CallbackId`プロパティを設定します。

```cs
AdjustEvent adjustEvent = new AdjustEvent("abc123");
//...
adjustEvent.CallbackId = "{your_callback_id}";
//...
Adjust.TrackEvent(adjustEvent);
```

### 例 \{\#example\-5\}

この例では、`g3mfiw`トークンでイベントを記録する方法を示します。この例では、 `CallbackId`は`f2e728d8-271b-49ab-80ea-27830a215147`に設定されています。

```cs
AdjustEvent adjustEvent = new AdjustEvent("g3mfiw");
string callbackId = "f2e728d8-271b-49ab-80ea-27830a215147"
adjustEvent.CallbackId = callbackId;
Adjust.TrackEvent(adjustEvent);
```

<codeblock title="イベントログ" highlight="{range: 7}"> 

```txt
Path:      /event
ClientSdk: unity$UNITY_V5_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      g3mfiw
  callback_id      f2e728d8-271b-49ab-80ea-27830a215147
```

</CodeBlock>

